--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ out/
 
 # Ignorer les fichiers de configuration sensibles
 /src/main/resources/application.properties
+
+# identifiant gradle
+/src/gradle.properties
